<resources>
    <string name="app_name">Foody</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="userName">User Name</string>
    <string name = "login">Log In</string>
    <string name = "signup">Sign Up</string>
    <string name = "user_name">Isuri Amasha</string>
    <string name = "user_phone">0770817059</string>
    <string name="main_course">Main Course</string>
    <string name="vegi">Vegitable Curry</string>
    <string name="non_vegi">Non-Vegitarian Curry</string>
    <string name="dessert">Dessert</string>
    <string name = "beverage">Beverage</string>
    <string name = "appetizer">Appetizer</string>


    <string name="chicken_fried_rice">Chicken Fried Rice</string>
    <string name="price">Rs.1000</string>
    <string name="mixed">Mixed Rice</string>
    <string name="vegi_rice">Vegitable Rice</string>
    <string name="sea_rice">Sea Food Rice</string>
    <string name="noodles">Noodles</string>
    <string name="biriyani">Biriyani</string>
    <string name="food_list">Food List</string>
    <string name="add_cart">Add to Cart</string>
    <string name="food_item">Food Item</string>
    <string name="order">Place Order</string>
    <string name="cart">Cart Details</string>
    <string name="cart_portion">2 portions</string>
    <string name="chicken_price">Rs.2000</string>
    <string name="caramel">Caramel Pudding</string>
    <string name="caramel_price">Rs.850</string>
    <string name="orange">Orange Juice</string>
    <string name="juice_price">Rs.1500</string>
    <string name="total">Total Price - Rs.3350.00</string>
    <string name="portion">One Portion - </string>
    <string name="num_portion">Number of portions </string>
    <string name="por_hint">1</string>
    <string name="item_des">Delicious and tasty Chicken fried rice made by using high quality and fresh products. Highly safe and secure to dine.</string>
    <string name="order_history">Order History</string>
    <string name="order_id">Order ID - F45600876</string>
    <string name="order_status">Order Status - Placed</string>
    <string name="client_num">Contact Number - 0770817059</string>
    <string name="address">Address - SLIIT, Malabe</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    //IT19176734 Dewapura B.N
    <string name="orderHead">Order List</string>
    <string name="orderNo">Order:Order No.</string>
    <string name="orderDetails">Order Details</string>
    <string name="menuItem1">View Order</string>
    <string name="menuItem2">Update Order</string>
    <string name="menuItem3">Delete Order</string>
    <string name="onTheWay">On the Way</string>
    <string name="placed">Order Placed</string>
    <string name="delivered">Delivered</string>
    <string name="Add_Catagory">Add Catagory</string>
    <string name="Edit_Ctagory">Edit Catagory</string>
    <string name="button3">Upload</string>
    <string name="addNewCatagory2">catagoryName</string>
    <string name="addNewCatagory">catagoryName</string>
    <string name="textView4">Add New Catagory</string>
    <string name="update_catagory">updateCatagory</string>
    <string name="delete_catagory2">deleteCatagory</string>
    <string name="update_name">Main Course</string>
    <string name="button6">Edit Image</string>



    //Kalana Rathnayake
    <string name="txtAddItem">Add Item</string>
    <string name="txtFillMsg">Please Fill All Information.</string>
    <string name="txtName">Name</string>
    <string name="txtDes">Description</string>
    <string name="txtPrice">Price</string>
    <string name="txtDiscount">Discount</string>
    <string name="BtnAddPic">Add Picture</string>
    <string name="BtnSubmit">Submit</string>
    <string name="txtEditItem">Edit Details</string>
    <string name="BtnEditPic">Edit Image</string>
    <string name="txtFoodNoodles">Noodles</string>
    <string name="txtFoodDescription">Mixed Chicken noodles with special sourse.</string>
    <string name="txtPriceNoodles">1000 Rs</string>
    <string name="txtDiscountNoodles">0 Rs</string>
    <string name="BtnDeleteItem">Delete This Item</string>
</resources>
