<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/btnSignUp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="7dp"
            android:src="@drawable/ic_toolbar" />

        <TextView
            android:id="@+id/txtAddItem"
            android:layout_width="195dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="103dp"
            android:layout_marginBottom="7dp"
            android:text="@string/txtAddItem"
            android:textAlignment="center"
            android:textColor="@color/txt_Black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>

    <TextView
        android:id="@+id/txtFillMsg"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:text="@string/txtFillMsg"
        android:textAlignment="center"
        android:textColor="@color/WarnColor_RED"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_Black"
        android:textSize="@dimen/txtFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:text="@string/txtName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrice"
        android:textColor="@color/txt_Black"
        android:textSize="@dimen/txtFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_Black"
        android:textSize="@dimen/txtFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        tools:text="@string/txtDes" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="338dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="384dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFillMsg" />

    <Button
        android:id="@+id/BtnAddPic"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:background="@drawable/custom_button"
        android:text="@string/BtnAddPic"
        android:textSize="@dimen/txtFont"
        app:layout_constraintBaseline_toBaselineOf="@+id/BtnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDiscount"
        android:textColor="@color/txt_Black"
        android:textSize="@dimen/txtFont"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="440dp" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="473dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="337dp"
        android:layout_height="82dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="264dp" />

    <Button
        android:id="@+id/BtnSubmit"
        android:layout_width="162dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_button"
        android:text="@string/BtnSubmit"
        android:textSize="@dimen/txtFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

</androidx.constraintlayout.widget.ConstraintLayout>