<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:gravity = "center"
    android:background="@drawable/blur_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:orientation="vertical"
        android:gravity = "center">

        <TextView
            android:id="@+id/foody"
            android:layout_width="149dp"
            android:layout_height="145dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/circle"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#B60A24"
            android:textSize="46sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editUserName"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:layout_marginBottom="20dp"
            android:hint = "@string/userName"
            android:textSize="14sp"
            android:drawableStart="@drawable/custom_person"
            android:drawablePadding="12dp"/>



        <EditText
            android:id="@+id/editUserPhone"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:hint = "@string/phone"
            android:textSize="14sp"
            android:inputType="phone"
            android:drawableStart="@drawable/custom_phone"
            android:drawablePadding="12dp"

            android:singleLine="true"

            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:hint = "@string/password"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="12dp"
            android:layout_marginBottom="40dp"

            android:singleLine="true"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:text="@string/signup"
            android:background="@drawable/custom_button"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>




    </LinearLayout>

</RelativeLayout>