<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".foodItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/body">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/btnSignUp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_toolbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/food_item"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="3"
            android:background="@color/body"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_marginTop="30dp"
                android:outlineSpotShadowColor="@android:color/black"
                android:outlineAmbientShadowColor="@android:color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_margin="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/fried_rice"
                        android:layout_margin="3dp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_marginTop="10dp"
                android:outlineSpotShadowColor="@android:color/black"
                android:outlineAmbientShadowColor="@android:color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/chicken_fried_rice"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/portion"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/price"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="18dp" />

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/num_portion"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />

                        <EditText
                            android:id="@+id/editTextNumber2"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_margin="5dp"
                            android:background="#E3DFDF"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/por_hint"
                            android:inputType="number"
                            android:textColorHint="#595656" />

                    </LinearLayout>





                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_marginTop="10dp"
                android:outlineSpotShadowColor="@android:color/black"
                android:outlineAmbientShadowColor="@android:color/black"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_des"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        android:layout_margin="10dp"/>




                </LinearLayout>

            </androidx.cardview.widget.CardView>





        </GridLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_cart"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:background="@drawable/custom_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />






    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

